# claudio

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
assets/: claudio.desktop
docs/: plan.md
gpui-terminal/src/: input.rs  render.rs  view.rs
ml_service/: pyproject.toml
ml_service/src/ok_claude_ml/: protocol.py  server.py  stt.py  tts.py  vad.py
scripts/: build-deb.sh  install.sh  uninstall.sh
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  pipe.rs  setup.rs
src/audio/: capture.rs  playback.rs
src/gui/: actions.rs  activity_bar.rs  app.rs  file_tree.rs  ipc_bridge.rs  mod.rs  orchestrator_index.rs  orchestrator_sidebar.rs  session_state.rs  status_bar.rs  terminal_grid.rs  theme.rs
src/hotkey/: evdev.rs
src/ipc/: client.rs  events.rs  mod.rs  protocol.rs  server.rs
src/ml_bridge/: client.rs
src/session/: manager.rs  mod.rs  mode.rs  session.rs  tmux.rs
tests/: cli_new_with_command.rs  orchestrator_parser.rs
